# delimiter-separated

./: LICENSE  README.md  Setup.hs  delimiter-separated.cabal
src/Text/: DelimiterSeparated.hs
test/: data.csv  data.tsv  mk  test.hs
