Name:                delimiter-separated
Version:             0.1.0.1
Copyright:           Atze Dijkstra
Description:         Delimeter separated file handling
Synopsis:            Library for dealing with tab and/or comma (or other) separated files
Homepage:            https://github.com/atzedijkstra/delimiter-separated
Bug-Reports:         https://github.com/atzedijkstra/delimiter-separated/issues
License:             BSD3
License-file:        LICENSE
Author:              atzedijkstra@gmail.com
Maintainer:          atzedijkstra@gmail.com
Category:            Development
Build-Type:          Simple
Cabal-Version:       >= 1.8
Extra-Source-Files:  
data-files:          LICENSE, README.md, test/mk, test/test.hs, test/data.csv, test/data.tsv

Source-Repository head
  Type:              git
  Location:          https://github.com/atzedijkstra/delimiter-separated

Library
  Hs-Source-Dirs:    src
  Extensions:        RankNTypes, FlexibleContexts, TypeSynonymInstances, FlexibleInstances
  Exposed-Modules:   Text.DelimiterSeparated
  Other-Modules:     
  Build-Depends:     base >= 4 && < 5,
                     uhc-util >= 0.1.1.0,
                     uulib >= 0.9

